--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 100vh;
-  background-image: url("https://cdn.pixabay.com/photo/2017/03/27/14/34/garden-2179095_640.jpg");
+  background-image: url("../assets/img/garten-j-landolt.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -26,8 +26,8 @@
 .overlay {
   position: absolute;
   color: white;
-  background: rgba(0, 0, 0, 0.5); /* Halbtransparentes Overlay */
-  padding: 20px;
+  background: rgba(0, 0, 0, 0.753); /* Halbtransparentes Overlay */
+  padding: 30px;
   border-radius: 10px;
   margin: 0 10px;
 }
