--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -29,19 +29,26 @@
   margin: 0 10px;
 }
 .overlay-text {
-  
   border-top: 1px solid #eee;
   text-align: center;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
+  font-style: italic ;
+  padding: 5px;
+  text-align: center;
+}
+h2 {
+  font-size: 1.5rem;
+  text-align: center;
   font-style: italic ;
   padding: 5px;
 }
 
 p {
   font-size: 1rem;
+  text-align: center;
 }
 /* Größerer Header nur für Desktop */
 @media screen and (min-width: 1024px) {
@@ -63,11 +70,11 @@ p {
 }
 @media (max-width: 768px) {
   h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   p {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .overlay {
