--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -112,3 +112,17 @@
     margin: auto; /* Sorgt dafür, dass Bilder mittig bleiben */
   }
 }
+@media (max-width: 670px) {
+  .gallery-item-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .gallery-item {
+    max-width: 300px;
+    height: 200px;
+    margin: auto; /* Sorgt dafür, dass Bilder mittig bleiben */
+  }
+}
