--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -8,7 +8,18 @@
   background-attachment: fixed;
   position: relative;
 }
-
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: green;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
 .gallery-title {
   font-size: 32px;
   font-weight: bold;
@@ -45,10 +56,7 @@
   border-radius: 20px;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   cursor: pointer;
-
-   display: flex;
-  justify-content: center;
-  align-items: center;
+  margin:  auto;
 }
 
 /* Lightbox-Effekt für große Ansicht */
