--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f4f4f4;
+  border-top: 1px solid #222;
+  margin-top: 40px;
+  background-attachment: fixed; /* Hintergrund bleibt fixiert */
+  background-position: center;
+  background-size: cover;
+
 }
 
 .contact h2 {
