--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -88,4 +88,11 @@
   .contact-form {
     padding: 0 20px;
   }
+  .contact-item p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  color: #333;
+}
 }
