--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -13,12 +13,15 @@ nav {
 
 .logo {
   position: absolute;
-  top: 20px;
-  left: 20px; /* Abstand zum linken Rand */
-  width: 50px; /* Größe anpassen */
-  height: 50px;
-  border-radius: 50%; /* Runde Ecken */
-  overflow: hidden; /* Falls das Bild größer ist */
+  top: 13px;
+  left: 20%; /* Abstand zum linken Rand */
+  width: 60px; /* Größe anpassen */
+  height: 60px;
+  justify-content: center;
+  box-shadow: 2px 3px 5px #0000007a;
+  border: 1px solid green;
+  border-radius: 50%; 
+  overflow: hidden; 
 }
 
 .logo img {
@@ -45,11 +48,7 @@ nav ul li a {
 /* **RESPONSIV** */
 @media (max-width: 768px) {
    .logo {
-    width: 50px; /* Kleinere Größe für mobile Geräte */
-    height: 50px;
-    top: 10px;
-    left: 10px;
-    padding: 5px;
+    display: none;
   }
   nav {
     flex-direction: row; /* Reihenfolge bleibt gleich */
