--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,25 +10,26 @@ nav {
   justify-content: space-between; /* Logo bleibt links, Navigation zentriert */
   z-index: 1000;
 }
-
 .logo {
   position: absolute;
-  top: 13px;
-  left: 20%; /* Abstand zum linken Rand */
-  width: 60px; /* Größe anpassen */
-  height: 60px;
+  top: 10px; /* Leichte Anpassung nach oben */
+  left: 20%; /* Abstand vom linken Rand */
+  width: 64px;
+  height: 64px;
+  display: flex;
   justify-content: center;
+  align-items: center; /* Vertikale Zentrierung */
   box-shadow: 2px 3px 5px #0000007a;
-  border: 1px solid green;
-  border-radius: 50%; 
+  border-radius: 50%;
   overflow: hidden; 
+  object-fit: fill;
 }
 
 .logo img {
   width: 100%;
   height: 100%;
-  display: block;
-  object-fit: cover; /* Sorgt für eine saubere Skalierung */
+  object-fit: contain; /* Verhindert zu viel Weißraum */
+  padding: 2px; /* Kleiner Innenabstand */
 }
 
 nav ul {
