--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -49,6 +49,24 @@ p {
   font-size: 1rem;
   text-align: center;
 }
+.whatsapp-button {
+display: inline-block;
+padding: 10px 10px;
+color: white;
+font-weight: bold;
+border-radius: 10px;
+text-decoration: none;
+transition: background-color 0.3s ease;
+width: auto; /* Passt sich dem Inhalt an */
+max-width: 50px; /* Setzt eine maximale Breite */
+text-align: center;
+justify-content: center;
+
+}
+
+.whatsapp-button:hover {
+  border-bottom: 1px solid #1ebe5d;
+}
 /* Größerer Header nur für Desktop */
 @media screen and (min-width: 1024px) {
   .header {
@@ -57,6 +75,11 @@ p {
 
   .overlay {
     padding: 40px; /* Größeres Padding für bessere Lesbarkeit */
+  }
+  .whatsapp-button {
+    font-size: 1.2rem;
+    padding: 12px 20px;
+    max-width: 60px;
   }
 
   h1 {
@@ -75,8 +98,21 @@ p {
   p {
     font-size: 1rem;
   }
+   .whatsapp-button {
+    font-size: 1rem;
+    padding: 10px 18px;
+    max-width: 55px;
+    text-align: center;
+  }
 
   .overlay {
     padding: 15px;
+  }
+}
+@media (max-width: 480px) {
+  .whatsapp-button {
+    font-size: 0.9rem;
+    padding: 8px 16px;
+    max-width: 50px;
   }
 }
