--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -63,7 +63,9 @@ h4 {
   text-decoration: underline;
   cursor: pointer;
   margin-top: 10px;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .modal-overlay {
   position: fixed;
@@ -85,10 +87,10 @@ h4 {
   padding: 25px;
   border-radius: 15px;
   width: 100%;
-  max-width: 600px;
+  max-width: 300px;
   max-height: 80vh;
   overflow-y: auto;
-  text-align: left;
+  text-align: center;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
@@ -101,7 +103,7 @@ h4 {
 }
 
 .modal-content p {
-  margin: 15px 0;
+  margin: 15px 0px;
   font-size: 16px;
 }
 
@@ -128,12 +130,16 @@ h4 {
 
 
 @media (min-width: 768px) {
-  .services-container {
+  .modal-content p {
+  margin: 10px 0;
+  font-size: 16px;
+}
+.services-container {
     flex-direction: row;
     justify-content: center;
   }
 
-    .service {
+  .service {
     width: 30%;
     margin-bottom: 40px; /* Fügt extra Abstand unter jedem Service hinzu */
   }
