--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 100vh;
-  background-image: url("../assets/img/garten-j-landolt.png");
+  background-image: url("https://cdn.pixabay.com/photo/2023/09/16/22/05/japan-8257601_640.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -23,6 +23,7 @@
   position: absolute;
   color: white;
   background: rgba(0, 0, 0, 0.753); /* Halbtransparentes Overlay */
+  box-shadow: 0 0px 52px 5px #1ebe5d ;
   padding: 30px;
   border-radius: 10px;
   margin: 0 10px;
@@ -90,6 +91,9 @@ justify-content: center;
   }
 }
 @media (max-width: 768px) {
+  .header {
+    object-fit: cover;
+  }
   h1 {
     font-size: 1.5rem;
   }
