--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -18,9 +18,15 @@
   color: #444;
   max-width: 800px; /* Setzt eine maximale Breite für den Text */
   margin: 0 auto; /* Zentriert den Text */
-  text-align: center;
+  text-align: left;
 }
-
+.about-p-description {
+  font-size: 18px;
+  color: #444;
+  max-width: 800px; /* Setzt eine maximale Breite für den Text */
+  margin: 0 auto; /* Zentriert den Text */
+  text-align: left;
+}
 /* Container für das Bild */
 .about-image-container {
   margin-top: 20px;
@@ -48,7 +54,8 @@
 
   #about p {
     font-size: 20px;
-    max-width: 750px; /
+    max-width: 750px; 
+    text-align: left;
   }
 }
 
@@ -63,5 +70,6 @@
 
   #about p {
     font-size: 22px;
+    text-align: left;
   }
 }
