--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,17 @@
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.575); /* Dunkle Overlay-Schicht */
+  z-index: 1;
+}
 .header {
   width: 100%;
   height: 100vh;
-  background-image: url("https://cdn.pixabay.com/photo/2023/09/16/22/05/japan-8257601_640.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2017/01/29/17/36/oak-tree-2018822_640.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -22,10 +32,11 @@
 .overlay {
   position: absolute;
   color: white;
-  background: rgba(0, 0, 0, 0.753); /* Halbtransparentes Overlay */
+  background-color:transparent; /* Halbtransparentes Overlay */
   padding: 30px;
   border-radius: 10px;
   margin: 0 10px;
+  z-index: 2;
 }
 .overlay-text {
   border-top: 1px solid #eee;
@@ -47,6 +58,8 @@ h2 {
 p {
   font-size: 1rem;
   text-align: center;
+  
+  padding: 5px;
 }
 .whatsapp-button {
 display: inline-block;
