--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -14,15 +14,14 @@ nav {
 
 .logo {
   position: absolute;
-  top: 10px;
+  top: 0px;
   left: 20%;
-  width: 64px;
-  height: 64px;
+  width: 104px;
+  height: 94px;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 2px 3px 5px #0000007a;
-  border-radius: 50%;
+ 
   overflow: hidden;
   object-fit: fill;
 }
@@ -49,6 +48,7 @@ nav {
 .nav-links {
   display: flex;
   list-style: none;
+  
   gap: 20px;
 }
 
@@ -64,6 +64,7 @@ nav ul li a {
   color: white;
   text-decoration: none;
   font-size: 18px;
+  
 }
 
 /* **RESPONSIV: Hamburger-Menü ganz rechts anzeigen** */
@@ -95,20 +96,23 @@ nav ul li a {
     width: 100%;
     text-align: right;
     display: none;
-    padding: 10px;
+    padding-left: 15px;
   }
 
   .nav-links.open {
     display: flex;
-    justify-content: center;
-    text-align: center;
+    justify-content: left;
+    text-align: left;
+    padding: 10px;
+    
   }
 
   .logo {
-    width: 90px;
+    width: 100px;
     height: 50px;
-    border-radius: 10px;
+    top: 20px;
     object-fit: cover;
+   
   }
 
   nav ul {
