--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -10,6 +10,7 @@
 
 }
 
+
 .services-title {
   font-size: 28px;
   font-weight: bold;
@@ -31,8 +32,8 @@
   align-items: center;
   text-align: center;
   padding: 20px;
-  border: 2px solid rgba(0, 128, 0, 0.3);
-  box-shadow: 0 2px 10px 1px rgba(128, 128, 128, 0.493);
+  border: 1px solid rgb(3, 3, 3);
+  box-shadow: 0 2px 10px 0px rgba(192, 245, 192, 0.658);
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.8);
   width: 80%;
@@ -56,7 +57,7 @@ h4 {
   white-space: nowrap; /* Verhindert Zeilenumbruch */
 }
 .service p {
-  
+  text-align: left;
   word-wrap: break-word; /* Falls langer Text, wird er umgebrochen */
 }
 .descriton-gall {
