--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -19,6 +19,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  will-change: transform;
+  transition: transform 0.3s ease-in-out;
 }
 .header img {
   position: absolute;
