--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -14,9 +14,17 @@
 
 .contact h2 {
   font-size: 32px;
-  margin-bottom: 40px;
+  margin-bottom: 5px;
   color: #222;
 }
+.contact p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: #555;
+  text-align: center; 
+  max-width: 600px; /* Maximale Breite für den Text */
+}
+  
 
 /* Formular-Styling */
 .contact-form {
