--- a/src/styles/Natursteinarbeiten.css
+++ b/src/styles/Natursteinarbeiten.css
@@ -24,6 +24,11 @@
   font-weight: bold;
   color: #333;
 }
+.text-wrapper h3 {
+  font-size: 20px;
+  text-align: left;
+  color: #333;
+}
 .text-wrapper p {
   font-size: 18px;
   color: #555;
