--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -11,7 +11,7 @@
 .header {
   width: 100%;
   height: 100vh;
-  background-image: url("https://cdn.pixabay.com/photo/2019/09/04/01/24/trees-4450514_640.jpg");
+  background-image: url("../assets/img/gartenbau-landolt-buelach.jpeg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
