anpassen hintergrund bild - einfügen cc mail

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -105,6 +105,10 @@ justify-content: center;
 }
 @media (max-width: 768px) {
   .header {
+      background-size: cover;
+    background-position: center;
+    background-attachment: scroll; /* Besser für mobile */
+    min-height: 80vh;
     object-fit: cover;
   }
   h1 {
@@ -125,6 +129,9 @@ justify-content: center;
   }
 }
 @media (max-width: 480px) {
+   .header {
+    min-height: 60vh;
+  }
   .whatsapp-button {
     font-size: 0.9rem;
     padding: 8px 16px;
