--- a/src/styles/Gartenpflege.css
+++ b/src/styles/Gartenpflege.css
@@ -23,6 +23,12 @@
   color: #333;
   text-align: left;
 }
+.text-wrapper h1 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #333;
+  text-align: left;
+}
 .text-wrapper p {
   font-size: 18px;
   color: #555;
