--- a/src/styles/GartenpflegeGartenbau.css
+++ b/src/styles/GartenpflegeGartenbau.css
@@ -25,6 +25,12 @@
   color: #333;
   text-align: left;
 }
+.text-box h1 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #333;
+  text-align: left;
+}
 .text-box h3 {
   font-size: 20px;
   font-weight: bold;
