--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -110,7 +110,7 @@
   border-bottom: 1px solid blue;
   color:#000;
   cursor: pointer;
-  background: radial-gradient(circle, rgba(0, 0, 255, 0.3) 0%, rgba(0, 0, 255, 0) 100%);
+  /* background: radial-gradient(circle, rgba(0, 0, 255, 0.3) 0%, rgba(0, 0, 255, 0) 100%); */
   padding: 10px;
   transition: background 0.3s ease-in-out;
 }
